@@ -4,9 +4,6 @@ license = Perl_5
 copyright_holder = Tim Bunce
 copyright_year   = 2011
 
-[Prereqs]
-;X X
-
 [Prereqs / TestRequires]
 Test::More = 0.88                    
 
@@ -27,7 +24,7 @@ Test::More = 0.88
 [ReadmeFromPod]
 
 ; t tests
-[CompileTests]
+[Test::Compile]
 fake_home = 1
 
 ; xt tests
@@ -37,8 +34,16 @@ fake_home = 1
 [PortabilityTests]
 
 ; metadata
-[AutoPrereqs]
-skip=ExtUtils::Perllocal::Parser
+[Prereqs]
+version = 0
+Compress::Zlib = 0
+CPAN::DistnameInfo = 0
+Digest::SHA = 0
+LWP::UserAgent = 0
+Module::CoreList = 0
+Module::Metadata = 0
+JSON = 0
+
 [MinimumPerl]
 ;[MetaProvides::Package]
 [MetaNoIndex]
@@ -52,7 +57,7 @@ directory = corpus
 
 ; build system
 [ExecDir]
-[ShareDir]
+;[ShareDir]
 [MakeMaker]
 
 ; manifest (after all generated files)
